--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,17 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven{
+            url "repository"
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath 'org.aspectj:aspectjtools:1.9.4'
         classpath 'org.aspectj:aspectjweaver:1.9.4'
-        
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
+        classpath 'com.example.aspectJPlugin:aspectJPlugin:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,3 +32,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
